tests/src/frontend/typechecking/invalid/as_operator_runtime_error_2.sk
fun main(): void {
  x = 4;
  _ = x as Int _
}
